kubernetes/apps/flux-system/flux-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
  namespace: flux-system
  annotations:
    glance/internal: "true"
    glance/icon: di:flux-cd
    glance/description: GitOps Reconciliation UI
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - "flux.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
